--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,31 @@
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["flit_core >=2,<4"]
+build-backend = "flit_core.buildapi"
+
+[tool.flit.metadata]
+module = "vendia"
+author = "Vendia Team"
+author-email = "dev@vendia.net"
+home-page = "https://github.com/vendia/vendia-python-tools"
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9"
+]
+description-file = "README.md"
+requires-python = ">=3.7"
+requires = [
+    "graphql-core"
+]
+
+[tool.flit.metadata.urls]
+Documentation = "https://www.vendia.net/docs/share"
+
+[tool.pylint.messages_control]
+disable = "C0330, C0326"
+
+[tool.pylint.format]
+max-line-length = "88"
