Update the things

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,7 @@ classifiers =
 python_requires = >= 3.8
 packages = find:
 zip_safe = true
-install_requires =
-    graphql-core
+install_requires = ["gql[requests]==3.0.0a5", "graphql-core==3.1.6", "requests"]
 
 [options.packages.find]
 exclude = tests
