--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,10 @@ classifiers =
 python_requires = >= 3.8
 packages = find:
 zip_safe = true
-install_requires = ["gql[requests]==3.0.0a5", "graphql-core==3.1.6", "requests"]
+install_requires = [
+    'gql[requests]==3.0.0a5',
+    'graphql-core==3.1.6'
+]
 
 [options.packages.find]
 exclude = tests
