--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,9 @@ python_requires = >= 3.8
 packages = find:
 zip_safe = true
 install_requires = [
-    'gql[requests]==3.0.0a5',
-    'graphql-core==3.1.6'
+    'gql==3.0.0a5',
+    'graphql-core==3.1.6',
+    'requests==2.26.0'
 ]
 
 [options.packages.find]
