--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,11 @@ classifiers =
 python_requires = >= 3.8
 packages = find:
 zip_safe = true
-install_requires = [ 'gql==3.0.0a5', 'graphql-core==3.1.6', 'requests==2.26.0' ]
+install_requires = [ 
+    gql==3.0.0a5
+    graphql-core==3.1.6
+    requests==2.26.0 
+]
 
 [options.packages.find]
 exclude = tests
