--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ python_requires = >= 3.8
 packages = find:
 zip_safe = true
 install_requires =
-    gql[requests]>=3
+    gql[requests]==3.0.0a5
     graphql-core>=3
     requests>=2.26
 
